--- a/MoviesHW/index.html
+++ b/MoviesHW/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Movies</title>
-    </head>
-    <body>
-        <h1>Best of the worst!</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
 
-            </tbody>
-        </table>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="app.js"></script>
-    </body>
+<head>
+    <title>Movies</title>
+</head>
+
+<body>
+    <h1>Best of the worst!</h1>
+    <button id="previous">Previous</button>
+    <button id="next">Next</button>
+
+    <select name="numberOfEntries" id="numOfEntries">
+        <option value="10">10</option>
+        <option value="20">20</option>
+        <option value="30">30</option>
+    </select>
+    <table>
+        <thead>
+            <tr>
+                <th>Raitng</th>
+                <th>Title</th>
+                <th>Poster</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="movie">
+                <td class="rating"></td>
+                <td class="title">
+                    <a href=""></a>
+                </td>
+                <td class="posterImage">
+                    <img src="" alt="">
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="app.js"></script>
+</body>
+
 </html>
